--- a/styles/base.css
+++ b/styles/base.css
@@ -8,9 +8,10 @@ body *::after {
   box-sizing: border-box;
 }
 
-[class] {
+/* class가 있을떄만 margin: 0; */
+/* [class] {
   margin: 0;
-}
+} */
 
 a {
   color: inherit;
