--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,30 @@
 @import url(./a11y.css);
 @import url(./theme.css);
 @import url(./base.css);
+
+/* 공통 스타일 */
+body {
+  background: var(--yellow);
+}
+
+@media (min-width: 320px) and (max-width: 768px) {
+  body {
+    background: var(--green);
+  }
+}
+
+/* 중단점 - 769px 이상 */
+@media (min-width: 769px) {
+  body {
+    background: var(--blue);
+  }
+}
+
+.news_videoContainer {
+  width: 70%;
+}
+
+.book__cover {
+  background: pink;
+  width: 30%;
+}
