--- a/styles/style.css
+++ b/styles/style.css
@@ -101,6 +101,86 @@ input[type="search"] {
   padding: var(--spacing-base) var(--spacing-lg);
 }
 
+/* 공통 메인 컨텐츠 섹션 제목 */
+
+[class*="__title"] {
+  margin-bottom: var(--spacing-base);
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+}
+
+[class*="__koTitle"] {
+  color: #000;
+  font-size: var(--text-md);
+  font-weight: 700;
+}
+
+.sprite {
+  color: #fff;
+  background: url("../assets/images/sprite_main.png") no-repeat;
+  height: 3.75rem;
+  padding-left: 4rem;
+}
+
+.spriteBook {
+  background-position: 0 0;
+}
+
+.spriteNews {
+  background-position: 0 -230px;
+}
+
+.spriteBoard {
+  background-position: 0 -115px;
+}
+
+.spriteFavorite {
+  background-position: 0 -345px;
+}
+
+.spriteTwitter {
+  background-position: 0 -460px;
+}
+
+.accentBook {
+  color: var(--accent-book);
+}
+.accentNews {
+  color: var(--accent-news);
+}
+.accentBoard {
+  color: var(--accent-board);
+}
+.accentFavorite {
+  color: var(--accent-favorite);
+}
+.accentTwitter {
+  color: var(--accent-twitter);
+}
+
+/* 공통 추천 서적 */
+.book {
+  grid-area: book;
+}
+
+/* 공통 새소식 */
+.news {
+  grid-area: news;
+}
+/* 공통 게시판 */
+.board {
+  grid-area: board;
+}
+/* 공통 인기사이트 */
+.favorite {
+  grid-area: favorite;
+}
+/* 공통 트위터 */
+.twitter {
+  grid-area: twitter;
+}
+
 /*! 모바일 디바이스 (Mobile Device) */
 @media (min-width: 320px) and (max-width: 768px) {
   /* 모바일 헤더 */
@@ -208,23 +288,16 @@ input[type="search"] {
     transform: none;
   }
 
-  /* 모바일 메인 컨텐츠 */
+  /* 모바일 메인 콘텐츠 */
   .appMain {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: auto;
-  }
-
-  /* grid practice - 모바일 새소식 */
-  .news {
-    /* grid-column-start: 1;
-    grid-column-end: 3; */
-    /** grid-column: 1/3; */
-
-    /* grid-row-start: 1;
-    grid-row-end: 2; */
-    /** grid-row: 1/2; */
-
-    /* grid-area: 1/1/2/3; */
+    grid-template-areas:
+      "book"
+      "news"
+      "board"
+      "favorite"
+      "twitter";
   }
 }
 
@@ -259,7 +332,7 @@ input[type="search"] {
     display: none;
   }
 
-  /* 데스크탑 메인메뉴 */
+  /* 데스크탑 메인 메뉴 */
   .menu {
     background: var(--secondary-color);
     padding: var(--spacing-base) var(--spacing-lg);
@@ -267,24 +340,33 @@ input[type="search"] {
 
   .menu__list {
     max-width: var(--container-width);
-    /* margin-left: auto;
-    margin-right: auto; */
-    margin: 0 auto;
-
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
   }
 
-  .menu__item {
-    padding: var(--spacing-md) 0;
+  .menu__link {
+    padding: var(--spacing-md) var(--spacing-lg);
+    color: var(--white);
+    font-size: 1.2rem;
+    text-shadow: 1px 1px 0 var(--black), -1px -1px 0 var(--black);
   }
 
-  .menu__link {
-    color: var(--white);
-    text-shadow: 1px 1px 0 var(--black), -1px -1px 0 var(--black);
-    padding: var(--spacing-base) var(--spacing-lg);
+  /* 데스크탑 메인 콘텐츠 */
+  .appMain {
+    width: var(--container-width);
+    margin-left: auto;
+    margin-right: auto;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: auto;
+    grid-template-areas:
+      "news news news news news news news news news news news news"
+      "book book book book twitter twitter twitter twitter twitter favorite favorite favorite"
+      "book book book book . board board board board board board board";
+    gap: var(--spacing-base);
   }
 }
 
